# Notes

./: pyproject.toml
notes/noteapp/: forms.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
notes/noteapp/templates/noteapp/: detail.html  edit_note.html  edit_tag.html  index.html  note.html  tags.html
notes/notes/: settings.py
notes/users/: forms.py  urls.py  views.py
notes/users/migrations/: 0001_initial.py
